# finance-app

./: .env.example  .gitignore  README.md  pyproject.toml
config/: categorization_prompt.txt
docs/: ROADMAP.md
docs/adr/: 0001-storage-and-cli-first.md  0002-itau-id-at-import.md  0003-sqlite-only-and-en-us-output.md  0004-standardized-data-pipeline.md  0005-tiered-pareto-categorization.md  README.md
scripts/: run-postgres.sh
src/finance_cli/: __init__.py  ai.py  cli.py  db.py  debug_cli.py  itau.py  notion.py  notion_backend.py  notion_cli.py  nu.py  utils.py
src/finances_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/itau/: layout_blocks.py  layout_lines.py  metadata.py  statements.py  utils.py
src/itau_pdf/: cli.py  debug.py  layout.py  metadata.py  statements.py  utils.py
tests/: test_canonicalize.py  test_category_similarity.py  test_itau.py  test_itau_layout_blocks.py  test_itau_layout_lines.py  test_itau_metadata.py  test_itau_refactored.py  test_notion.py  test_notion_backend.py  test_nu.py
tests/itau_pdf/: test_statements.py  test_utils.py
