[project]
name = "finances-app"
version = "0.1.0"
description = "Personal finance CLI for parsing statements"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Thiago" }]
dependencies = [
  "pandas>=2.2",
  "pymupdf>=1.24",
  "typer>=0.12",
  "openai>=1.40",
  "python-dotenv>=1.0",
  "notion-client>=2.2",
  "rich>=13.0",
]

[project.scripts]
finance = "finance_cli.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
